# Fraud_Detection_System

./: .gitignore  EDA _and_Model_Trainer.ipynb  README.md  fraud_detection_model.pkl  pyproject.toml  requirements.txt  web_app.py
